Closed Bug 1164135 Opened 10 years ago Closed 10 years ago

fix AtkHyperlink::GetStartIndex

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox40 --- fixed
firefox41 --- fixed

People

(Reporter: tbsaunde, Assigned: tbsaunde)

Details

Attachments

(1 file)

No description provided.
Attachment #8604801 - Flags: review?(dbolter)
Comment on attachment 8604801 [details] [diff] [review] fix AtkHyperlink::GetStartIndex Review of attachment 8604801 [details] [diff] [review]: ----------------------------------------------------------------- Let's get this landed then uplifted to Aurora as well.
Attachment #8604801 - Flags: review?(dbolter) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Flags: needinfo?(dbolter)
Comment on attachment 8604801 [details] [diff] [review] fix AtkHyperlink::GetStartIndex Approval Request Comment [Regressing bug #]: Bug 1164135 [User impact if declined]: linux screen reader can't work [Describe test coverage new/current, TreeHerder]: we aren't set up to test this layer. [Risks and why]: minuscule risk, linux a11y only codepath, one simple line fix. [String/UUID change made/needed]: No.
Flags: needinfo?(dbolter)
Attachment #8604801 - Flags: approval-mozilla-aurora?
Comment on attachment 8604801 [details] [diff] [review] fix AtkHyperlink::GetStartIndex Approved for uplift to aurora.
Attachment #8604801 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee: nobody → tbsaunde+mozbugs
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: