Bug 1164135 - Fix AtkHyperlink::GetStartIndex. r=davidb, a=lizzard